# hse_db

./: .gitignore  README.md  task02.puml
task03/: README.md  subtask02.txt  subtask03.txt
task03/subtask01/: subtask01.txt
task04/: README.md  docker-compose.yml
task04/sqls/: 1.sql  2.sql  3.sql
task05/: README.md
task05/subtask01/: create_tables.sql  fill_tables.sql  init_tables.sql  queries.sql
task05/subtask02/: create_tables.sql  fill_tables.sql  queries.sql
task06/: README.md  subtask01.sql  subtask02.sql  subtask03.sql
task07/: .env  README.md  docker-compose.yml  main.py  pyproject.toml  test.py
task07/alembic/: env.py  script.py.mako
task07/alembic/versions/: 00ad3f3a7a78_countries.py  577cdab6393a_init.py  687b604fba96_olympics.py
task07/cli/: __init__.py  commands.py
task07/core/: config.py  db.py
task07/models/: country.py  event.py  olympic.py  player.py  result.py
task07/queries/: __init__.py
task07/seeder/: __init__.py  consts.py  seed_validations.py
task08/: README.md  docker-compose.yml
task09/: README.md
task10_local/: task2.md
task11/: task1.md  task2.md  task3.md
