[tool.poetry]
name = "task07"
version = "0.1.0"
description = "Homework #7 for HSE database course."
authors = ["Artemy Dadykov"]

[tool.poetry.dependencies]
faker = "^30.8.2"
psycopg = {extras = ["binary"], version = "^3.2.3"}
pydantic-settings = "^2.6.1"
python = "^3.12"
sqlmodel = "^0.0.22"
psycopg2-binary = "^2.9.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
