[tool.poetry]
name = "task07"
version = "0.1.0"
description = "Homework #7 for HSE database course."
authors = ["Artemy Dadykov"]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.cli.dependencies]
click = "^8.1.7"

[tool.poetry.group.database.dependencies]
alembic = "^1.14.0"
psycopg = {extras = ["binary"], version = "^3.2.3"}
pydantic-settings = "^2.6.1"
sqlmodel = "^0.0.22"

[tool.poetry.group.formatters.dependencies]
flake8 = "^7.1.1"

[tool.poetry.group.seed.dependencies]
faker = "^30.8.2"
pycountry = "^24.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
